*** empty log message ***

--- a/samples/routing/networks/omnetpp.ini
+++ b/samples/routing/networks/omnetpp.ini
@@ -16,7 +16,7 @@
 #
 
 [General]
-preload-ned-files = net60a.ned fullgraph.ned mesh.ned
+preload-ned-files = *.ned ../*.ned
 
 [Parameters]
 net60a.**.destAddresses="1 28 50"
