--- a/samples/queues/omnetpp.ini
+++ b/samples/queues/omnetpp.ini
@@ -41,7 +41,7 @@ fifonet.fifo[0].service_time = exponential(2)
 fifonet.fifo[*].service_time = exponential(2)
 
 [Run 2]
-description = "closed queueing network of ring topology"
+description = "a closed queueing network (ring)"
 network = ring
 
 # Please mind that the ring network does not contain an internal
@@ -65,7 +65,7 @@ fifonet.fifo[0].service_time = exponential(2)
 fifonet.fifo[*].service_time = exponential(2)
 
 [Run 4]
-description = "ring, with number of queues as input"
+description = "ring, with no. of queues as input"
 network = ring
 
 #ring.num_buffers = 3
