--- a/samples/cqn/omnetpp.ini
+++ b/samples/cqn/omnetpp.ini
@@ -13,7 +13,7 @@ status-frequency=10000
 #default-run=1
 
 [Run 1]
-description="cqnB (tandem queues wrapped in compound modules)"
+description="cqnB (boxed tandem queues)"
 network=cqnB
 *.numTandems = 3
 *.tandemQueue[*].numQueues = 5
@@ -23,7 +23,7 @@ network=cqnB
 *.tandemQueue[*].qDelay=1
 
 [Run 2]
-description="cqnA (all tandem queues on the top level)"
+description="cqnA (flattened)"
 network=cqnA
 *.numTandems = 3
 *.numQueuesPerTandem = 5
