--- a/src/utils/opp_neddoc.in
+++ b/src/utils/opp_neddoc.in
@@ -129,8 +129,8 @@ while (@ARGV)
 
 if ($do_help)
 {
-    print "opp_neddoc - NED and MSG documentation tool, part of OMNeT++\n";
-    print "(c) 2003-2004 Andras Varga\n\n";
+    print "opp_neddoc - NED and MSG documentation tool, part of OMNeT++/OMNEST\n";
+    print "(c) 2003-2005 Andras Varga\n\n";
     print "Generates HTML model documentation from .ned and .msg files.\n\n";
     if ($GHOSTSCRIPT eq "" && $CONVERT eq "")
     {
