*** empty log message ***

--- a/samples/dyna/realtime/omnetpp.ini
+++ b/samples/dyna/realtime/omnetpp.ini
@@ -2,4 +2,15 @@
 scheduler-class = "cRealTimeScheduler"
 #realtimescheduler-scaling=0.5
 
-include ../omnetpp.ini
+network = dyna
+preload-ned-files=../*.ned
+
+[Tkenv]
+default-run = 1
+
+[Parameters]
+dyna.numClients = 4
+dyna.client[*].connIaTime =  exponential( 10s )
+dyna.client[*].queryIaTime = exponential( 2s )
+dyna.client[*].numQuery =  truncnormal( 3, 1 )
+dyna.server.processingTime =  0.2s
