*** empty log message ***

--- a/samples/neddemo/omnetpp.ini
+++ b/samples/neddemo/omnetpp.ini
@@ -1,6 +1,10 @@
 [General]
 preload-ned-files=*.ned
 
+# if running under Cmdenv, uncomment the following line (in Tkenv, you choose from a dialog)
+#network=binaryTree1
+
+
 [Parameters]
 
 chain.n = 6
