*** empty log message ***

--- a/samples/routing/networks/omnetpp.ini
+++ b/samples/routing/networks/omnetpp.ini
@@ -17,6 +17,7 @@
 
 [General]
 preload-ned-files = *.ned ../*.ned
+network=net60a   # Tkenv will still let you choose from a dialog
 
 [Parameters]
 net60a.**.destAddresses="1 28 50"
