--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -3,6 +3,7 @@
 
 [General]
 preload-ned-files=*.ned
+network=tictoc1  # this line is for Cmdenv, Tkenv will still let you choose from a dialog
 
 [Parameters]
 
