--- a/samples/fifo/.tkenvrc
+++ b/samples/fifo/.tkenvrc
@@ -21,6 +21,7 @@ option expressmode_autoupdate	{1}
 config rununtil-event	{}
 config last-nedfile	{}
 config filtobjlist-category	{mqsgvo}
+config display-timeline	{1}
 config filtobjlist-maxcount	{100000}
 config editor-findstring	{}
 config rununtil-time	{}
@@ -32,10 +33,12 @@ config filtobjlist-name	{}
 config confirm-exit	{1}
 config editor-backwards	{1}
 config display-treeview	{1}
+config timeline-maxnumevents	{1000}
 config editor-case-sensitive	{0}
 config editor-whole-words	{0}
 config filtobjlist-order	{Class}
 inspector "fifonet" "FifoNet" "2" "443x277+370+366"
+inspector "fifonet.sink" "FFSink" "1" "460x312+48+62"
 inspector "fifonet.sink.queueing time vector" "cOutVector" "2" "353x197+9+467"
 inspector "fifonet.fifo.queue" "cQueue" "1" "351x230+11+203"
 
