*** empty log message ***

--- a/src/plove/Makefile.in
+++ b/src/plove/Makefile.in
@@ -47,6 +47,7 @@ ENGINE_OBJS =  engine/exception.o \
                engine/dataflowmanager.o \
                engine/windowavg.o \
                engine/slidingwinavg.o \
+               engine/diffquot.o \
                engine/arraybuilder.o \
                engine/filewriter.o \
                engine/vectorfilereader.o \
