--- a/src/plove/Makefile.vc
+++ b/src/plove/Makefile.vc
@@ -38,6 +38,7 @@ ENGINE_OBJS =  engine/exception.obj \
                engine/dataflowmanager.obj \
                engine/windowavg.obj \
                engine/slidingwinavg.obj \
+               engine/diffquot.obj \
                engine/arraybuilder.obj \
                engine/filewriter.obj \
                engine/vectorfilereader.obj \
