--- a/samples/hist/.tkenvrc
+++ b/samples/hist/.tkenvrc
@@ -1,6 +1,46 @@
-"Histograms" "HistogramDemo" "1" "385x247+186+341"
-"Histograms.LongHistogram" "cLongHistogram" "2" "320x195+9+2"
-"Histograms.DoubleHistogram" "cDoubleHistogram" "2" "321x207+7+231"
-"Histograms.VarHistogram" "cVarHistogram" "2" "322x185+8+472"
-"Histograms.PSquare" "cPSquare" "2" "334x194+347+2"
-"Histograms.K-Split" "cKSplit" "2" "386x322+347+230"
+# Tkenv configuration
+option updatefreq_fast	{10}
+option updatefreq_express	{1000}
+option stepdelay	{300 ms}
+option use_mainwindow	{1}
+option print_banners	{0}
+option animation_enabled	{1}
+option nexteventmarkers	{1}
+option senddirect_arrows	{1}
+option anim_methodcalls	{1}
+option methodcalls_delay	{200}
+option animation_msgnames	{1}
+option animation_msgclassnames	{1}
+option animation_msgcolors	{1}
+option penguin_mode	{0}
+option showlayouting	{0}
+option bubbles	{1}
+option animation_speed	{1.5}
+option bkpts_enabled	{1}
+option expressmode_autoupdate	{1}
+config rununtil-event	{}
+config last-nedfile	{}
+config filtobjlist-category	{mqsgvo}
+config display-timeline	{1}
+config filtobjlist-maxcount	{100000}
+config editor-findstring	{}
+config rununtil-time	{}
+config dontshow	{}
+config editor-regexp	{0}
+config filtobjlist-class	{}
+config rununtil-mode	{Express (tracing off)}
+config filtobjlist-name	{}
+config confirm-exit	{1}
+config editor-backwards	{1}
+config display-treeview	{1}
+config timeline-maxnumevents	{1000}
+config editor-case-sensitive	{0}
+config editor-whole-words	{0}
+config filtobjlist-order	{Class}
+inspector "Histograms" "HistogramDemo" "1" "385x247+186+341"
+inspector "Histograms.LongHistogram" "cLongHistogram" "2" "320x195+9+2"
+inspector "Histograms.DoubleHistogram" "cDoubleHistogram" "2" "321x207+7+231"
+inspector "Histograms.VarHistogram" "cVarHistogram" "2" "322x185+8+472"
+inspector "Histograms.PSquare" "cPSquare" "2" "334x194+347+2"
+inspector "Histograms.K-Split" "cKSplit" "2" "386x322+347+230"
+
