--- a/src/scalars/Makefile.vc
+++ b/src/scalars/Makefile.vc
@@ -33,6 +33,7 @@ SCALARS_OBJS = scalars$(SCALARS_EMBED_SUFFIX).obj \
                tkutil.obj
 ENGINE_OBJS =  engine/scalarmanager.obj \
                engine/filtering.obj \
+               engine/datasorter.obj \
                engine/patmatch.obj \
                engine/texception.obj \
                engine/util.obj
@@ -88,12 +89,19 @@ tkcmd.obj: tkcmd.cc \
   engine/scalarmanager.h \
   engine/filtering.h \
   engine/util.h \
+  engine/datasorter.h \
   engine/texception.h
 tklib.obj: tklib.cc \
   tklib.h \
   tkutil.h
 tkutil.obj: tkutil.cc \
   tkutil.h
+engine/datasorter.obj: engine/datasorter.cc \
+  engine/scalarmanager.h \
+  engine/util.h \
+  engine/datasorter.h \
+  engine/texception.h \
+  engine/filtering.h
 engine/filtering.obj: engine/filtering.cc \
   engine/patmatch.h \
   engine/filtering.h \
