*** empty log message ***

--- a/src/utils/opp_neddoc.in
+++ b/src/utils/opp_neddoc.in
@@ -400,7 +400,8 @@ sub runprog
     if ($isWindows) {
         system($ENV{COMSPEC}, "/c", @prog);
     } else {
-        system(@prog);
+        my $cmd = join(' ',@prog);
+        system($cmd);
     }
 }
 
