--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -35,7 +35,7 @@ CPPOBJS_STD = task.o ccoroutine.o ctypes.o carray.o cgate.o \
          cmodule.o csimplemodule.o csimul.o cobject.o cvisitor.o cpar.o \
          cstat.o chist.o cdensity.o cvarhist.o cpsquare.o cksplit.o \
          cmessage.o cdetect.o util.o cllist.o ctopo.o errmsg.o \
-         cmsgheap.o coutvect.o cqueue.o globals.o cwatch.o \
+         cmsgheap.o coutvect.o cqueue.o globals.o cwatch.o cstlwatch.o \
          cpacket.o cfsm.o cstruct.o cchannel.o cenum.o cexception.o cdispstr.o \
          cdefaultlist.o cscheduler.o onstartup.o distrib.o \
          cxmlelement.o cmersennetwister.o clcg32.o cstrtokenizer.o
