*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -156,6 +156,14 @@ build_shared_libs=if-not-windows
 TK_CFLAGS=
 TK_LIBS=
 
+if test -d /usr/include/tcl8.4; then
+    # this was reported to be the case on Debian 3.1 "sarge"
+    TK_CFLAGS="-I/usr/include/tcl8.4"
+fi
+if test -d /usr/include/tcl8.5; then
+    TK_CFLAGS="-I/usr/include/tcl8.5"
+fi
+
 if test "$cygwin" = yes; then
     BLT_LIBS="-lBLT24 -mwindows -lwinspool"
 else
