*** empty log message ***

--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -383,7 +383,7 @@ endif
 OMNETPP_LIBS=-L\$(OMNETPP_LIB_DIR) \$(USERIF_LIBS) \$(KERNEL_LIBS) \$(SYS_LIBS)
 
 COPTS=\$(CFLAGS) \$(INCLUDE_PATH) -I\$(OMNETPP_INCL_DIR)
-NEDCOPTS=\$(CFLAGS) \$(NEDCFLAGS) \$(INCLUDE_PATH) -I\$(OMNETPP_INCL_DIR)
+NEDCOPTS=\$(COPTS) \$(NEDCFLAGS)
 EOT
     echo "$generatecfgfile created."
     exit
@@ -594,7 +594,7 @@ endif
 OMNETPP_LIBS=-L\$(OMNETPP_LIB_DIR) \$(USERIF_LIBS) \$(KERNEL_LIBS) \$(SYS_LIBS)
 
 COPTS=\$(CFLAGS) \$(INCLUDE_PATH) -I\$(OMNETPP_INCL_DIR)
-NEDCOPTS=\$(CFLAGS) \$(NEDCFLAGS) \$(INCLUDE_PATH) -I\$(OMNETPP_INCL_DIR)
+NEDCOPTS=\$(COPTS) \$(NEDCFLAGS)
 EOT
 fi
 
