--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -31,7 +31,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 #
 COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -DBUILDING_SIM $(MPI_CFLAGS) $(PVM_CFLAGS)
 
-CPPOBJS_STD = task.o ccoroutine.o ctypes.o carray.o cgate.o \
+CPPOBJS_STD = task.o ccoroutine.o ctypes.o carray.o cgate.o cpolymorphic.o \
          cmodule.o csimplemodule.o csimul.o cobject.o cvisitor.o cpar.o \
          cstat.o chist.o cdensity.o cvarhist.o cpsquare.o cksplit.o \
          cmessage.o cdetect.o util.o cllist.o ctopo.o errmsg.o \
