--- a/configure.in
+++ b/configure.in
@@ -188,10 +188,64 @@ SHLIB_LD=${SHLIB_LD:-$CXX -shared -fPIC}
 AC_PROG_RANLIB
 
 #----------------------
-# test for "-z allextract" (Sun) or "--whole-archive" (GNU) linker option,
+# Test if --export-dynamic or -E linker option is accepted and/or needed
+#----------------------
+# We want to be able to dynamically load extensions into simulation executables,
+# so we need to ensure that all symbols in the executable are visible to 
+# dynamically loaded libraries. However, not all linkers need or support
+# --export-dynamic.
+# Strategy: we'll compile the following program into a shared library:
+#      void function_from_main();
+#      void some_func() {func_from_main();}
+# Then we link it with the following program:
+#      void func_from_main() {}
+#      int main() {return 0;}
+# And we expect to be able to run the program successfully.
+AC_MSG_CHECKING(if --export-dynamic is supported/needed)
+echo 'void function_from_main();' >conftest_a.cc
+echo 'void some_func() {func_from_main();}' >>conftest_a.cc
+echo 'void func_from_main() {}' >conftest_m.cc
+echo 'int main() {return 0;}' >>conftest_m.cc
+if $CXX -c conftest_a.cc >/dev/null 2>/dev/null && \
+   $CXX -c conftest_m.cc >/dev/null 2>/dev/null && \
+   $SHLIB_LD libconftest_a.so conftest_a.o >/dev/null 2>/dev/null; \
+then
+   silly_ok="no"
+   # 1st try.
+   if $CXX -o conftest conftest_m.o libconftest_a.so >/dev/null 2>/dev/null; then
+      if ./conftest >/dev/null 2>/dev/null; then
+         AC_MSG_RESULT(not needed)
+         silly_ok="yes"
+      fi
+   fi
+   # 2nd try.
+   if $CXX -o conftest -Wl,--export-dynamic conftest_m.o libconftest_a.so >/dev/null 2>/dev/null; then
+      if ./conftest >/dev/null 2>/dev/null; then
+         AC_MSG_RESULT(supported)
+         LDFLAGS="$LDFLAGS -Wl,--export-dynamic"
+         silly_ok="yes"
+      fi
+   fi
+   # no solution found
+   if test $silly_ok = "no"; then
+      AC_MSG_RESULT(no solution found)
+      AC_MSG_WARN([No way was detected to export symbols from executables to shared])
+      AC_MSG_WARN([libraries. You probably will not be able to dynamically load])
+      AC_MSG_WARN([simple modules or other extensions written in C++ into simulation])
+      AC_MSG_WARN([programs like INET.])
+   fi
+else
+   AC_MSG_RESULT(test failed)
+fi
+rm -f conftest_a.* conftest_m.* libconftest_a.so conftest
+
+
+
+#----------------------
+# Test for "-z allextract" (Sun) or "--whole-archive" (GNU) linker option,
 #----------------------
 # Goal: to eliminate "silly linker problem", that is, to convince the linker
-# to include constructors of static C++ object in statically linked libraries.
+# to include constructors of static C++ objects in statically linked libraries.
 # To test, we'll compile the following code into a static library:
 #      #include <stdio.h>
 #      class A { public: A() {printf("=WORKS=\n");} };
@@ -258,7 +312,7 @@ then
 else
    AC_MSG_RESULT(test failed)
 fi
-rm -f conftest_a.* conftest_m.* libconftest_a.a
+rm -f conftest_a.* conftest_m.* libconftest_a.a conftest
 
 
 #----------------------
